--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .venv
-
 myteacher/__pycache__
-teacher/__pycache__/__init__.cpython-310.pyc
-teacher/__pycache__/apps.cpython-310.pyc
+teacher/__pycache__/
+teacher/migrations/__pycache__/
+
